--- a/css/style.css
+++ b/css/style.css
@@ -8179,7 +8179,7 @@ h1, h2, h3, h4, h5,
   .ftco-navbar-light .navbar-brand {
     color: #fff; }
     .ftco-navbar-light .navbar-brand span {
-      color: #01d28e; }
+      color: #5465FF; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-brand {
         color: #fff; } }
@@ -8251,7 +8251,7 @@ h1, h2, h3, h4, h5,
     border: 1px solid #01d28e;
     background: #01d28e !important; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #01d28e; }
+    color: #5465FF; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
       color: #1089ff; } }
@@ -8389,13 +8389,13 @@ h1, h2, h3, h4, h5,
   .slider-text .icon-wrap .icon {
     width: 70px;
     height: 70px;
-    background: #01d28e;
+    background: #FFFFFF;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     border-radius: 50%; }
     .slider-text .icon-wrap .icon span {
-      color: #fff; }
+      color: #5465FF; }
   .slider-text .icon-wrap .heading-title {
     position: relative; }
     .slider-text .icon-wrap .heading-title:after {
@@ -8614,13 +8614,13 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #1089ff !important;
-    border: 1px solid #1089ff !important;
-    color: #fff !important; }
+    background: #FFFFFF;
+    border: 1px solid #5465FF ;
+    color: #5465FF ; }
     .btn.btn-primary:hover {
-      border: 1px solid #1089ff;
-      background: transparent;
-      color: #1089ff; }
+      border: 1px solid #5465FF;
+      background: #5465FF;
+      color: #FFFFFF; }
     .btn.btn-primary.btn-outline-primary {
       border: 1px solid #1089ff;
       background: transparent;
@@ -8630,9 +8630,9 @@ h1, h2, h3, h4, h5,
         background: #1089ff;
         color: #fff; }
   .btn.btn-secondary {
-    background: #01d28e !important;
-    border: 1px solid #01d28e !important;
-    color: #fff !important; }
+    background: #FFFFFF !important;
+    /* border: 1px solid #01d28e !important; */
+    color: #5465FF !important; }
     .btn.btn-secondary:hover {
       border: 1px solid #01d28e;
       background: transparent;
@@ -8969,7 +8969,7 @@ h1, h2, h3, h4, h5,
     right: 0;
     bottom: 0;
     content: '';
-    background: #01d28e;
+    background: #5465FF;
     z-index: -2;
     width: 63%; }
     @media (max-width: 767.98px) {
@@ -9030,7 +9030,7 @@ h1, h2, h3, h4, h5,
       width: 40%;
       content: '';
       opacity: 1;
-      background: #01d28e;
+      background: #5465FF;
       -ms-transform: rotate(20deg);
       /* IE 9 */
       -webkit-transform: rotate(20deg);
@@ -9158,7 +9158,7 @@ textarea.form-control {
     font-weight: 700;
     color: #fff; }
     .ftco-footer .logo span {
-      color: #01d28e; }
+      color: #5465FF; }
   .ftco-footer .ftco-footer-widget h2 {
     font-weight: normal;
     color: #fff;
